# cpp_project_template_cmake

./: CMakeLists.txt
include/: configure_template.h
src/: main.cpp
